[package]
name = "yrs-actix-redis-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3.30"
bytes = { version = "1.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
async-trait = "0.1"
actix = { version = "0.13.3", features = ["macros"] }
actix-ws = { version = "0.3", features = [] }
actix-web = { version = "4.5.1", features = [] }
actix-http = { version = "3.9", features = [] }
actix-rt = "2.9.0"
actix-web-actors = { version = "4.3" }
actix-service = "2.0"
actix-identity = "0.7"
actix-router = "0.5"
actix-session = { version = "0.10" }
actix-multipart = { version = "0.7.2", features = ["derive"] }
thiserror = "1.0"
redis = { version = "0.26", features = ["aio", "async-trait", "tokio-comp", "serde", "bytes", "streams", "connection-manager"] }
tracing = { version = "0.1", features = ["log"] }
env_logger = "0.11"
uuid = { version = "1.10", features = ["serde", "v7"] }
yrs = { version = "0.21.1", features = ["sync"] }
opendal = { version = "0.49", features = ["services-s3", "services-memory"] }
dashmap = "6.1.0"
arc-swap = "1.7"
rand = "0.8.5"

# Optional dependencies
flate2 = "1.0"